--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -11,15 +11,15 @@
 
 .container {
     margin: 0 auto;
-    max-width: 750px;
-    padding: 1rem;
+    max-width: 95%;
+    padding: 2rem;
 
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
-.content {
-    flex-grow: 1;
-}
+// .content {
+//     flex-grow: 1;
+// }
 
