--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,16 +1,28 @@
 .header {
-    position: relative;
-    z-index:300;
-    margin-top: -10px;
+    position: flex;
+    // z-index:300;
+    justify-content: center;
+    width: 100%;
     font-size:15px;
     
 }
-.container,
+.header ul {
+    display: block;
+    margin: 0;
+    padding: 0;
+    list-style:none;
+}
+
 .header-left {
     display:flex;
     -webkit-box-align:center;
     align-items: center;
     margin-left: 18px;
+    padding-right: 10px;
+    position:relative;
+        z-index:100;
+    white-space:nowrap;
+
 }
 
 // .header-left {
@@ -21,25 +33,31 @@
 // }
 
 
-.header-right {
-    position: relative;
-    z-index: 100;
-    padding-left: 0.3em;
-}
-
 .title {
     color: #131313;
     font-size: 21px;
     text-decoration: none;
-    font-style:sans-serif;
+    font-style: sans-serif;
     display: block;
     padding: 10px;
     line-height: 21px;
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 1px;
-    margin: 0;
+    position: relative;
+    bottom: 65px;
+    left: 50rem;
     text-align: start;
+    // flex-shrink: 0;
+    // display: block;
+    // padding: 10px;
+    // color: var(--color-base);
+    // font-size: 21px;
+    // line-height: 1em;
+    // font-weight: 700;
+    // text-transform: uppercase;
+    // letter-spacing: 1px;
+
 }
 
 .nav-list {
@@ -59,6 +77,11 @@
     // font-size: 2.0rem;
     margin-right: 1.3rem;
     text-decoration: none;
+    display:block;
+    margin: 0;
+    padding: 10px 12px;
+    font-weight:600;
+    opacity:0.4;
 }
 
 .nav-item:hover {
@@ -69,18 +92,6 @@
     color: #333333;
 }
 
-.header-right,
-.social-links {
-    flex-shrink: 0;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font:inherit;
-    font-style: inherit;
 
-    font-size: 100%;
-    vertical-align: baseline;
-}
+
+
