--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,97 +1,40 @@
-.header {
-    position: flex;
-    // z-index:300;
-    justify-content: center;
-    width: 100%;
-    font-size:15px;
-    
+
+.header{
+    padding: 1rem 0 3rem;
 }
-.header ul {
-    display: block;
-    margin: 0;
-    padding: 0;
-    list-style:none;
-}
-
-.header-left {
-    display:flex;
-    -webkit-box-align:center;
-    align-items: center;
-    margin-left: 18px;
-    padding-right: 10px;
-    position:relative;
-        z-index:100;
-    white-space:nowrap;
-
-}
-
-// .header-left {
-//     position: relative;
-//     z-index: 100;
-//     margin-right: 10px;
-//     white-space: nowrap;
-// }
-
 
 .title {
-    color: #131313;
-    font-size: 21px;
-    text-decoration: none;
-    font-style: sans-serif;
-    display: block;
-    padding: 10px;
-    line-height: 21px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 1px;
+    color:#000000;
+    font-size:21px;
+    text-decoration:none;
     position: relative;
-    bottom: 65px;
-    left: 50rem;
-    text-align: start;
-    // flex-shrink: 0;
-    // display: block;
-    // padding: 10px;
-    // color: var(--color-base);
-    // font-size: 21px;
-    // line-height: 1em;
-    // font-weight: 700;
-    // text-transform: uppercase;
-    // letter-spacing: 1px;
-
+        left: 555px;
+        bottom: 36px;
+    
 }
 
 .nav-list {
     display: flex;
-    list-style: none;
     list-style-type: none;
-    list-style-position: initial;
-    list-style-image: initial;
-    margin: 0 0 0 -12px;
-    font-size: 15px;
-    padding: 0;
-    
+    margin: 0;
+    line-height:25px;
 }
 
 .nav-item {
-    color: #999999;
-    // font-size: 2.0rem;
+    color:#999999;
+    font-size: 13.5px;
     margin-right: 1.3rem;
     text-decoration: none;
-    display:block;
-    margin: 0;
-    padding: 10px 12px;
-    font-weight:600;
-    opacity:0.4;
 }
 
 .nav-item:hover {
-    color: #666666;
+    color:#666666;
 }
 
-.active-nav-item {
+.active-nav-item{
     color: #333333;
+    
 }
-
 
 
 
