--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,15 +1,21 @@
 
 .header{
     padding: 1rem 0 3rem;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+    height: 15px;
+    text-align:center;
 }
 
 .title {
     color:#000000;
     font-size:21px;
     text-decoration:none;
-    position: relative;
-        left: 555px;
-        bottom: 36px;
+    // position: relative;
+    //     left: 555px;
+    text-align:start;
     
 }
 
@@ -17,7 +23,7 @@
     display: flex;
     list-style-type: none;
     margin: 0;
-    line-height:25px;
+    height:25px;
 }
 
 .nav-item {
